@@ -1,4 +1,11 @@
 *************************************************************************
+Changes in version ???
+*************************************************************************
+
+NEW FEATURES
+    o rmatrix now generates dimnames if argument dimnames=TRUE
+
+*************************************************************************
 Changes in version 0.22
 *************************************************************************
 
